LU-4791 lod: release stripe info if xattr set fails

1. Release stripe information, if xattr set fails.
2. Check EA size in declare_xattr_set.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: Ibe46b8cbc161f151eae4eb14878af4406fc78d41